--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -28,3 +28,21 @@
   --ifm-color-primary-lightest: #4fddbf;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
+
+[alt='ilzom_intro'] {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 150px;
+}
+
+[alt='RaidGuild_intro'] {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 500px;
+}
+
+[alt='ilzom_next'] {
+  width: 30px;
+}
