Footer color update

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -27,6 +27,7 @@
   --ifm-color-primary-light: #ffa880;
   --ifm-color-primary-lighter: #ffb897;
   --ifm-color-primary-lightest: #fac2a8;
+  --ifm-footer-background-color: #ff5200;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
 
