--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -13,7 +13,7 @@
   --ifm-color-primary-light: #ffa880;
   --ifm-color-primary-lighter: #ffb897;
   --ifm-color-primary-lightest: #fac2a8;
-  --ifm-footer-background-color: #fac2a8;
+  --ifm-footer-background-color: #ff874d;
   --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
 }
@@ -27,7 +27,7 @@
   --ifm-color-primary-light: #ffa880;
   --ifm-color-primary-lighter: #ffb897;
   --ifm-color-primary-lightest: #fac2a8;
-  --ifm-footer-background-color: #ff5200;
+  --ifm-footer-background-color: #ff874d;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
 
